fixed some covered links, need to rework layout as flexbox

--- a/my-website/src/components/layout.css
+++ b/my-website/src/components/layout.css
@@ -15,8 +15,6 @@ body {
 
 section {
     height: fit-content(100%);
-    position: sticky;
-    z-index: -1;
 }
 
 footer {
@@ -26,14 +24,9 @@ footer {
 
 main {
     overflow: hidden;
-    position: relative;
-    top: 15%;
-    padding-top: 10%;
-    z-index: -1;
+    padding-top: 8%;    
 }
 
 article {
     width: 70%;
-    position: sticky;
-    z-index: -1;
 }
